plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.studyspaces'
version = '0.0.1-SNAPSHOT'
description = 'spacefinder'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
	// Spring Boot main
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// .env loader
	implementation 'io.github.cdimascio:dotenv-java:3.2.0'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.7.2'

	// JUnit + Mockito extras (optional)
	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
	testImplementation 'org.mockito:mockito-core:5.10.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'
}

tasks.named('test') {
    useJUnitPlatform()
	environment System.getenv()
}

test{
	useJUnitPlatform()
	environment System.getenv()
}
